# CapstoneProject

./: .gitignore
AI-Service/: .gitignore  README.md  clip.yaml  clip_custom_model.py  clip_custom_text_encoder.py  clip_image_model.py  clip_text_encoder.py  config.yaml  custom-config.yaml  download_model.py  key_frame_extractor_model.py  locustfile.py  pyproject.toml  test_clip_model.py  test_ray.py  translate_model.py
Backend/: README.md  clip_api.py  development.md  docker-compose.override.yml  docker-compose.yml  setup_data_folders.sh
Backend/backend/: Dockerfile  alembic.ini  pyproject.toml
Backend/backend/alembic/: env.py
Backend/backend/alembic/versions/: 2af2e258fe7e_initial_database_schema.py
Backend/backend/app/: main.py
Backend/backend/app/api/: main.py
Backend/backend/app/api/routes/: albums.py  login.py  media.py  search.py  users.py
Backend/backend/app/core/: clip_client.py  clip_text_client.py  config.py  db.py  keyframe_client.py  object_storage.py  translation_client.py  vector_db.py
Backend/backend/app/crud/: __init__.py  album.py  keyframe.py  media.py  media_embedding.py  media_metadata.py  user.py
Backend/backend/app/models/: __init__.py  album.py  base_models.py  face.py  face_embedding.py  keyframe.py  media.py  media_embedding.py  media_metadata.py  photo.py  search_history.py  user.py
Backend/backend/scripts/: prestart.sh  test_search.py
Backend/documentations/: Database.md  Software_Requirement_Document.md
Frontend/: README.md  index.html  tailwind.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: CreateAlbumModal.tsx  DeleteAlbumModal.tsx  MediaGrid.tsx  MediaPreviewModal.tsx  MediaViewer.tsx  Navbar.tsx  UploadButton.tsx  UploadModal.tsx
Frontend/src/components/auth/: GoogleSignUpButton.tsx  RegisterForm.tsx
Frontend/src/components/ui/: badge.tsx  button.tsx  toggle.tsx
Frontend/src/hooks/: useAuth.tsx
Frontend/src/lib/: api.ts  utils.ts
Frontend/src/pages/: Home.tsx  Login.tsx  MediaView.tsx  NotFound.tsx  Register.tsx  Search.tsx  Settings.tsx
Frontend/src/types/: index.ts
